# VQA

./: ARCHITECTURE.md  DATASETS.md  LICENSE  README.md  __init__.py  agent.py  baselines.py  benchmark_edge.py  benchmark_summary.json  benchmarks.py  config.py  conftest.py  costs.py  create_reference_checkpoints.py  data.py  datasets.py  download_datasets.py  dp.py  environment.py  evaluate_qatm.py  evaluation.py  evaluation_summary.json  export_tflite_micro.py  features.py  git_push.md  kyber_channel.py  main.cpp  make_figures.py  metrics.py  model_data.h  mps_memory.py  paper_qatm.yaml  physionet2015.npz  physionet_features.py  platformio.ini  prepare_datasets.py  pyproject.toml  qatm.yaml  qatm_ble.cpp  qatm_config.h  (+28 more)
